--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
 	<h1>Funkce a události</h1>
 
 	<div class="ctverecek">Čtvereček</div>
+	<button onclick="changeColor()">Změnit barvu</button>
+
 
 	<pre>Tady bude výsledek: <span id="vysledek"></span></pre>
 
 	<button onclick="upozorni()">
 		Moje tlačítko
+	</button>
+
+	<button onclick="show_result(4,5)">
+		Ukaž výsledek
 	</button>
 
 	<div class="napoveda">
